security-group.tf
# resource "aws_security_group" "eks_cluster_sg" {
#   name        = "${local.env}-eks-cluster-sg"
#   description = "Security group for EKS control plane"
#   vpc_id      = aws_vpc.main.id

#   ingress {
#     description = "Allow worker nodes to talk to control plane"
#     from_port   = 443
#     to_port     = 443
#     protocol    = "tcp"
#     cidr_blocks = ["${local.cidr_block}"]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = {
#     Name = "eks-cluster-sg"
#   }
# }

# resource "aws_security_group" "jumpbox_sg" {
#   name        = "${local.env}-jumpbox-sg"
#   description = "Security group for Jumpbox"
#   vpc_id      = aws_vpc.main.id

#   ingress {
#     description = "SSH from local machine"
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = [local.my_ip]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = {
#     Name = "jumpbox_sg"
#   }
# }

# resource "aws_security_group" "eks_nodes_sg" {
#   name        = "${local.env}-eks-nodes-sg"
#   description = "Security group for EKS worker nodes"
#   vpc_id      = aws_vpc.main.id

#   ingress {
#     description     = "Allow control plane traffic"
#     from_port       = 1025
#     to_port         = 65535
#     protocol        = "tcp"
#     security_groups = [aws_security_group.eks_cluster_sg.id]
#   }

#   ingress {
#     description = "Node-to-node communication"
#     from_port   = 0
#     to_port     = 65535
#     protocol    = "tcp"
#     self        = true
#   }

#   ingress {
#     description     = "Allow SSH from Jumpbox"
#     from_port       = 22
#     to_port         = 22
#     protocol        = "tcp"
#     security_groups = [aws_security_group.jumpbox_sg.id]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = {
#     Name = "eks-nodes-sg"
#   }
# }
